- Terminada la implementación de la clase 'Text'. - Modificada la interfaz del struct 'WordRate'; ahora es un tipo definido 'pair'. - Realizados algunos cambios menores en Style, Statistics, WordRate, FontColor, FontProportionality y FontWeight - Añadidas las cabeceras necesarias que se habían omitido en revisiones anteriores para las clases 'Style', 'Statistics' y 'WordRate' - Actualizada la documentación con Doxygen - Actualizado el Makefile y la función de prueba.

--- a/trunk/Makefile
+++ b/trunk/Makefile
@@ -25,7 +25,6 @@ MAGICK=`Magick++-config --cppflags --cxxflags --ldflags --libs`
 MAIN_SRC=$(SRC)main.cpp
 
 # Source files of 'WordRate' structure
-WORD_RATE_SRC=$(SRC)WordRate.cpp
 WORD_RATE_INC=$(INC)WordRate.h
 
 # Source files of 'Statistics' struct
@@ -35,6 +34,9 @@ STATISTICS_INC=$(INC)Statistics.h
 # Source files of 'FontWeight' enumeration
 FONT_WEIGHT_INC=$(INC)FontWeight.h
 
+# Source files of 'FontProportionality' enumeration
+FONT_PROPORTIONALITY_INC=$(INC)FontProportionality.h
+
 # Source files of 'FontColor' struct
 FONT_COLOR_SRC=$(SRC)FontColor.cpp
 FONT_COLOR_INC=$(INC)FontColor.h
@@ -43,23 +45,29 @@ FONT_COLOR_INC=$(INC)FontColor.h
 STYLE_SRC=$(SRC)Style.cpp
 STYLE_INC=$(INC)Style.h
 
+# Source files of 'Text' class
+TEXT_SRC=$(SRC)Text.cpp
+TEXT_INC=$(INC)Text.h
+
 # Object files
 MAIN_OBJ=$(SRC)main.o
-WORD_RATE_OBJ=$(SRC)WordRate.o
 STATISTICS_OBJ=$(SRC)Statistics.o
 FONT_COLOR_OBJ=$(SRC)FontColor.o
 STYLE_OBJ=$(SRC)Style.o
+TEXT_OBJ=$(SRC)Text.o
 
 # Dependencies
 MAIN=$(MAIN_SRC)
-WORD_RATE=$(WORD_RATE_INC) $(WORD_RATE_SRC)
+WORD_RATE=$(WORD_RATE_INC)
 STATISTICS=$(STATISTICS_INC) $(STATISTICS_SRC)
 FONT_WEIGHT=$(FONT_WEIGHT_INC)
+FONT_PROPORTIONALITY=$(FONT_PROPORTIONALITY_INC)
 FONT_COLOR=$(FONT_COLOR_INC) $(FONT_COLOR_SRC)
 STYLE=$(STYLE_INC) $(STYLE_SRC)
+TEXT=$(TEXT_INC) $(TEXT_SRC)
 
 # Final object files
-OBJECTS=$(WORD_RATE_OBJ) $(STATISTICS_OBJ) $(FONT_COLOR_OBJ) $(STYLE_OBJ) $(MAIN_OBJ)
+OBJECTS=$(STATISTICS_OBJ) $(FONT_COLOR_OBJ) $(STYLE_OBJ) $(TEXT_OBJ) $(MAIN_OBJ)
 
 # Compiler options
 EXECUTABLE=test
@@ -73,48 +81,48 @@ TAB=\t
 # Main rule
 main: $(OBJECTS)
 	@printf "** Linking and building the main rule:$(NL)"
-	@printf "$(TAB)- Linking...$(NL)"
-	@g++ $(FLAGS) $(MAGICK) $(OBJECTS) -o $(EXECUTABLE)
+	@printf "$(TAB)"
+	g++ $(FLAGS) $(MAGICK) $(OBJECTS) -o $(EXECUTABLE)
 	@printf "$(NL)** Compilation completed!$(NL)$(NL)"
 
 $(MAIN_OBJ): $(MAIN)
 	@printf "** Making rule $(MAIN_OBJ):$(NL)"
-	@printf "$(TAB)- Compiling...$(NL)"
-	@g++ $(FLAGS) -c $(MAIN_SRC) 
-	@printf "$(TAB)- Moving to $(SRC) directory...$(NL)"
-	@mv main.o $(SRC)
+	@printf "$(TAB)"
+	g++ $(FLAGS) -c $(MAIN_SRC) 
+	@printf "$(TAB)"
+	mv main.o $(SRC)
 	@printf "$(NL)"
 
-$(WORD_RATE_OBJ): $(WORD_RATE)
-	@printf "** Making rule $(WORD_RATE_OBJ):$(NL)"
-	@printf "$(TAB)- Compiling...$(NL)"
-	@g++ $(FLAGS) -c -I$(INC) $(WORD_RATE_SRC) 
-	@printf "$(TAB)- Moving to $(SRC) directory...$(NL)"
-	@mv WordRate.o $(SRC)
-	@printf "$(NL)"
-
-$(STATISTICS_OBJ): $(WORD_RATE_OBJ) $(STATISTICS) 
+$(STATISTICS_OBJ): $(WORD_RATE) $(STATISTICS) 
 	@printf "** Making rule $(STATISTICS_OBJ):$(NL)"
-	@printf "$(TAB)- Compiling...$(NL)"
-	@g++ $(FLAGS) -c -I$(INC) $(STATISTICS_SRC) 
-	@printf "$(TAB)- Moving to $(SRC) directory...$(NL)"
-	@mv Statistics.o $(SRC)
+	@printf "$(TAB)"
+	g++ $(FLAGS) -c $(STATISTICS_SRC) 
+	@printf "$(TAB)"
+	mv Statistics.o $(SRC)
 	@printf "$(NL)"
 
 $(STYLE_OBJ): $(FONT_COLOR_OBJ) $(FONT_WEIGHT) $(STYLE) 
 	@printf "** Making rule $(STYLE_OBJ):$(NL)"
-	@printf "$(TAB)- Compiling...$(NL)"
-	@g++ $(FLAGS) -c -I$(INC) $(STYLE_SRC) 
-	@printf "$(TAB)- Moving to $(SRC) directory...$(NL)"
-	@mv Style.o $(SRC)
+	@printf "$(TAB)"
+	g++ $(FLAGS) -c $(STYLE_SRC)
+	@printf "$(TAB)"
+	mv Style.o $(SRC)
 	@printf "$(NL)"
 	
 $(FONT_COLOR_OBJ): $(FONT_COLOR)
 	@printf "** Making rule $(FONT_COLOR_OBJ):$(NL)"
-	@printf "$(TAB)- Compiling...$(NL)"
-	@g++ $(FLAGS) -c -I$(INC) $(FONT_COLOR_SRC) 
-	@printf "$(TAB)- Moving to $(SRC) directory...$(NL)"
-	@mv FontColor.o $(SRC)
+	@printf "$(TAB)"
+	g++ $(FLAGS) -c $(FONT_COLOR_SRC)
+	@printf "$(TAB)"
+	mv FontColor.o $(SRC)
+	@printf "$(NL)"
+
+$(TEXT_OBJ): $(FONT_PROPORTIONALITY) $(STYLE_OBJ) $(WORD_RATE) $(TEXT)
+	@printf "** Making rule $(TEXT_OBJ):$(NL)"
+	@printf "$(TAB)"
+	g++ $(FLAGS) -c $(TEXT_SRC)
+	@printf "$(TAB)"
+	mv Text.o $(SRC)
 	@printf "$(NL)"
 
 # Makes everything
