- Revisados los métodos de las clases Preprocessor y Recognizer para sustituir en la medida de lo posible los bucles clásicos por los iteradores de la Standard Template Library.

--- a/trunk/Makefile
+++ b/trunk/Makefile
@@ -82,8 +82,8 @@ OBJECTS=$(RECOGNIZER_OBJ) $(PREPROCESSOR_OBJ) $(CLIP_OBJ) $(NESSIE_EXCEPTION_OBJ
 # Compiler options
 EXECUTABLE=$(BIN)ocr
 DEBUG=NO
-COMPILER_DEBUGGING_OPTIONS=-g
-LINKER_DEBUGGING_OPTIONS=-finstrument-functions -lSaturn
+COMPILER_DEBUGGING_OPTIONS=-g -finstrument-functions
+LINKER_DEBUGGING_OPTIONS=-lSaturn
 FLAGS=-Wall -O3 -I$(INC)
 
 # Formatted output commands
